--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,10 @@
     "version": 2,
     "name": "music-album",
     "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
+       { "src": "*.js", "use": "@vercel/node" },
+        { "src": "*.html", "use": "@vercel/static" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/app.js" }
+       { "src": "/(.*)", "dest": "/" }
     ]
  }
