--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://qrapidnow:qrapidnow@qrapid.qqhwzou.mongodb.net/yourdbname?retryWrites=true&w=majority&appName=qrapid
+MONGODB_URI=mongodb+srv://qrapidnow:qrapidnow@qrapid.qqhwzou.mongodb.net/?retryWrites=true&w=majority&appName=qrapid
